Changelog
=========

0.5 (unreleased)
----------------

- Adjust garbage can view template so that it doesn't break when an object doesn't
  have the title, description, or portal_type attributes.

- Remove acquisition context before adding restored item to container.

- #2602355: Add separate audit log entry for each item that is restored or
  expunged. Log correct action for expunge script.
  [2019-02-20]

- Fix test
  [2019-06-21]

- #2926649: Fix garbage can view when folder contents contains a title with
  non-ascii characters.
  [JL 2019-09-11]